--- a/src/index.css
+++ b/src/index.css
@@ -38,10 +38,12 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 
   body {
     @apply text-gray-900 bg-gray-50;
+    overflow-x: hidden;
   }
 }
 
